--- a/src/app/components/movement/movement.component.html
+++ b/src/app/components/movement/movement.component.html
@@ -56,7 +56,7 @@
                                     <i class="fa fa-instagram"></i>
                                 </a>
                             </p>
-                            <p>Основатель проекта. Танцор современных направлений. Найдет выход из любой ситуации.</p>
+                            <p>Основатель проекта и руководитель проекта.</p>
                         </div><!-- /.col-lg-4 -->
                         <div class="col-md-6">
                             <img class="rounded-circle" src="/assets/images/anya.jpg" alt="Generic placeholder image" width="140" height="140">
@@ -69,7 +69,7 @@
                                     <i class="fa fa-instagram"></i>
                                 </a>
                             </p>
-                            <p>Главный помощник, мозговой центр. Руководитель танцевального коллектива, в танцах 11 лет.</p>
+                            <p>Мозговой центр команды по работе с партнерами и участниками проекта/p>
                         </div><!-- /.col-lg-4 -->
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                                     <i class="fa fa-instagram"></i>
                                 </a>
                             </p>
-                            <p>Мастер танца и контента, журналистский факультет СПбГУ.</p>
+                            <p>SMM - специалист, студент факультета журналистики СПбГУ.</p>
                         </div><!-- /.col-lg-4 -->
                         <div class="col-md-6">
                             <img class="rounded-circle" src="/assets/images/dasha.jpg" alt="Generic placeholder image" width="140" height="140">
@@ -130,7 +130,7 @@
                                     <i class="fa fa-vk"></i>
                                 </a>
                             </p>
-                            <p>Профессиональный педагог, высококлассный тренер. Учитель по призванию.</p>
+                            <p>Хореограф в запасе.</p>
                         </div><!-- /.col-lg-4 -->
                     </div>
                 </div>
@@ -172,14 +172,14 @@
             Цель
         </h3>
         <p>
-            Создание инклюзивных условий для реабилитации и социализации детей и молодежи с ограниченными возможностями здоровья посредством творчества и хореографии,
-            включающей телесно-двигательную терапии.
+            Создание инклюзивных условий для реабилитации и социализации детей и молодежи с ограниченными возможностями здоровья 
+            посредством творчества и хореографии, включающей телесно-двигательную терапиию.
         </p>
         <p>
             Участники нашего проекта – это в первую очередь дети-инвалиды, которые готовы обучаться у наших волонтеров
             танцевальному искусству.
             Помимо всего, в проекте принимают участие родители, для которых мы организуем семейные творческие мастер-классы,
-            на которых дети и вместе с родителями взаимодействуют и креативят вместе с нашими добротворцами.
+            где мама и ребенок создают что-то своими руками с помощью наших добротворцев!
         </p>
         <div class="center-image-container">
             <img class="movement-image" src="/assets/images/onebaby.jpg">
@@ -206,18 +206,17 @@
             Волонтерам
         </h3>
         <p>
-            В нашем проекте «Движение – это жизнь» творческие личности с большими сердцами помогают детям с инвалидностью
-            стать лучше, реализовать свой потенциал и помогают осваивать танцевальное искусство. Наши танцоры, хореографы и
-            другие волонтеры – волонтеры с самой широкой и доброй душой!
+           В нашем проекте «Движение – это жизнь» творческие личности с большими сердцами 
+           помогают детям с инвалидностью стать лучше,реализовать свой потенциал и помогают осваивать танцевальное искусство. 
+           Наши хореографы и волонтеры – ребята с самой широкой и доброй душой!
         </p>
         <p>
             Мы хотим, чтобы в нашей команде были люди, которые готовы делиться своим опытом и хотят прокачивать свои
-            организаторские и творческие способности, поэтому читай ниже!
+            организаторские и творческие способности, поэтому: 
         </p>
         <p>
-            Если ты волонтер и давно ищешь теплую компанию, в нашей некоммерческой компании тебе всегда найдут применение,
-            если даже ты неопытный и нетворческий, творческий и неопытный, опытный и танцующий (творческий)!
-            Приходи, мы тебя ждем!
+            Если ты хочешь быть полезным и давно ищешь теплую компанию, в нашей  — тебе всегда найдут занятие по душе! 
+            Приходи, будем рады тебе!
         </p>
 
         <h3 id="contact">
@@ -259,24 +258,25 @@
             Родителям
         </h3>
         <p>
-            Проект «Движение – это жизнь» является социальным направлением в хореографии, как способа реабилитации и адаптации детей и
-            молодежи с ограниченными возможностями здоровья. Основная идея проекта заключается в том, что дети и молодежь с ограниченными
-            возможностями здоровья, нуждающиеся в социализации и реабилитации, взаимодействуют со всеми участниками проекта путём
-            погружения в танцевальную, творческую деятельность.
+            Проект «Движение – это жизнь» является социальным направлением в хореографии, как способ реабилитации и адаптации детей и
+            молодежи с ограниченными возможностями здоровья. Основная идея проекта заключается в том, что команда проекта помогает 
+            реабилитироваться посредством творчества, танцевального искусства. Самое главное, все участники нашего проекта 
+            реализуют свой творческий потенциал и выступают на сцене, участвуют в конкурсах и фестивалях.
         </p>
         <div class="center-image-container">
             <img class="movement-image" src="/assets/images/parents.jpg">
         </div>
         <p>
-            Особым значением для проекта является развитие инклюзивного образования в области танцевального искусства.
+            Хочется отметить, что особым значением для проекта является развитие инклюзивного образования в области танцевального искусства.
             Для занятий с детьми и молодежью с инвалидностью II и III групп в центрах социальной реабилитации, благотворительных
-            фондах привлекаются студенты профильных ВУЗов, которые тем самым получают так необходимую им практику работы с особенными
-            людьми. А танцевальная терапия, в свою очередь, способ социализации и реабилитации детей и молодежи с ограниченными
-            возможностями здоровья, развитию у них навыков самообслуживания в повседневной жизни, умения управлять своим телом и
-            креативных способностей.
+            фондах привлекаются молодые танцоры и хореографы. Танцевальные занятия, включающие двигательную терапию, способствуют 
+            социализации и реабилитации детей и молодежи с ограниченными возможностями здоровья,  развитию у них навыков самообслуживания в повседневной жизни. 
+            А наши хореографы всегда работают над координацией и баланса тела, внутренний гармонии ребенка, обучают их умениям управлять своим телом и развивают креативные способности. 
+
+
         </p>
         <p>
-            Если вы верите в своего ребенка, приводите его к нам! Будем творить вместе, ведь в танцах все равны!
+            Ждем вас на наших занятиях!  
         </p>
         <div class="center-image-container">
             <img class="movement-image" src="/assets/images/pair_dance.jpg">
