--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -1,52 +1,45 @@
 <div class="container">
     <div class="site-about">
         <p>
-            Победа в конкурсе: в 2018 году «Движение – это жизнь»
+            В 2018 году «Движение – это жизнь» выиграл грант от фонда Президентских грантов, предоставленного на развитие 
+            гражданского общества Президентом Российской Федерации. Благодаря этому наш проект стал шире и мы смогли
+            привлечь многих детей с инвалидностью к участию в танцах.
+        </p>
+        
+        <p>
+            Благодаря этому по реализации проекта мы достигли следующих результатов:
+            -проведение 300 и более танцевальных занятий (групповых и индивидуальных);
+            -привлечение 60 участников в танцы;
+            -700 гостей мы приняли на наших мероприятиях (Танцевальный фестиваль и Бал);
+            -80 добровольцев были с нами в течение этого сезона;
+            -проведение 30 творческих/танцевальных мастер -классов;
+            - 4 федеральные и региональные СМИ засняли о нас небольшие сюжетные 
+            ролики: «Россия 1», «Санкт-Петербург», «канал 78», интернет-канал «Город +»;
+            -4 крупных интернет-изданий поддержали нас: «Бумага», «Такие дела», «KudaGo», «Сарафан».
+        </p>
+        
+        <p>
+            Так мы смогли продвинуться и сделать еще больше хорошего и доброго для детей и молодежи с инвалидностью 
+            г. Санкт-Петербурга, благодарим всех партнеров, которые смогли поддержать наш проект и вместе с нами развить
+            инклюзивное движение города.
+        </p>
+        
+        <p>
+            Ежегодно мы проводим несколько крупных мероприятий, например,Рождественский благотворительный бал, 
+            который проходит в конце декабря. Участники проекта представляют свои танцевальные номера, лучшие из лучших 
+            получают подарки от Деда Мороза и Снегурочки, гости праздника имеют возможность принять участие в развлекательных 
+            интерактивах, конкурсах фестиваля и получить ценные призы от наших партнеров и спонсоров!
+        </p>
+        
+        <p>
+            В 2020 году вас ждут не менее интересные мероприятия - открытые танцевальные мастер-классы, квартирники, III инклюзивный 
+            фестиваль «Живи танцуя» подробности тут
             <a target="_blank"
-               href="https://президентскиегранты.рф/public/application/item?id=46ED6218-785E-4485-9B0A-E6B511C09A0D">выиграл</a>
-            грант от фонда Президентских грантов,
-            предоставленного на развитие гражданского общества Президентом Российской Федерации.
+               href="https://vk.com/dvij_zhizn">Фестиваль «Живи танцуя»</a>
         </p>
-        <div class="center-image-container">
-            <img class="movement-image" src="/assets/images/putin.png">
-        </div>
-        <p>
-            Это достигнуто благодаря работе всей команды: хореографов, волонтеров, родителей и детей! Спасибо за
-            доверие!
-            Наш проект станет шире и впереди нас ожидает только лучшее!
-        </p>
-        <p>
-            Теперь у нас есть независимая площадка,
-            где проходят танцевальны занятия для всех детей с инвалидностью г.Санкт-Петербурга без привязки к району:
-        </p>
-        <p>ЗАНЯТИЯ ПРОХОДЯТ ПО АДРЕСУ: м. Старая деревня, по адресу ул. Мебельная 2. А., 3 раза в неделю:</p>
-
-        <ul>
-            <li>
-                понедельник/четверг (танцы) с 18.00 до 19.00
-            </li>
-            <li>
-                среда (танцевальная лаборатория) с 10.00 до 11.00.
-            </li>
-        </ul>
-        <p>
-            Ждём вас и ваших детей, ведь в танцах все равны! По всем вопросам: Дарья Матвеева + 7 952 356 93 01.
-        </p>
-
+        
         <p>
             #фондпрезидентскихгрантов #грантпрезидента #движениеэтожизнь
-        </p>
-
-        <p>
-            22 декабря мы провели грандиозное мероприятие - Рождественский благотворительный бал,
-            нас посетило 350 человек! Участники проекта представили танцевальные номера, гости праздника
-            поучаствовали в развлекательных интерактивах, кружились в вальсе, главное - пролечили свои долгожданные
-            призы и
-            подарки от Деда Мороза и Снегурочки! Как это было?
-        </p>
-        <p>
-            Читайте подробнее <a target="_blank"
-                                 href="https://vk.com/@dvij_zhizn-itogi-nashego-grandioznogo-meropriyatiya-my-prinyali-350-che">здесь</a>.
         </p>
         <p>
             #inclusive_бал #движениеэтожизнь
@@ -57,10 +50,6 @@
         <div class="center-image-container">
             <img class="movement-image" src="/assets/images/santa.jpg">
         </div>
-        <p>
-            В 2019 году вас ждут не менее интересные мероприятия - открытые танцевальные мастер-классы, танцевальный
-            квартирник проекта и конечно всеми любимый - II инклюзивный фестиваль «Живи танцуя».
-        </p>
 
         <div class="center-image-container">
             <img class="movement-image" src="/assets/images/fest.jpg">
