--- a/src/app/components/movement/movement.component.html
+++ b/src/app/components/movement/movement.component.html
@@ -3,7 +3,7 @@
         <p>
             <!--            Мы добиваемся равных возможностей для детей инвалидов. Мы верим, что скоро наши детки будут танцевать так, что зрители не-->
             <!--            поверят, когда мы скажем, сколько им лет и будут вдвойне ошарашены, когда узнают про инвалидность.-->
-            «Как и где себя может реализовать ребенок-инвалид?» Наш проект поможет ответить вам на эти вопросы.
+            «Как и где себя может реализовать ребенок с особенностями?» Наш проект поможет ответить вам на эти вопросы.
             Посредством занятий по хореографии и выступлений на творческих конкурсах, участия в креативных мастер-классах проекта
             «Движение – это жизнь» ваш ребенок сможет найти себя и адаптироваться в современном обществе.
         </p>
